GNOME Bugzilla – Bug 86593
gnome-font-properties crashes on startup [gtk_window_set_icon_list]
Last modified: 2004-12-22 21:47:04 UTC
Package: control-center Severity: critical Version: 2.0.0 Synopsis: gnome-font-properties crashes on startup Bugzilla-Product: control-center Bugzilla-Component: font properties BugBuddy-GnomeVersion: 2.0 (2.0.1) Description: Description of Problem: gnome-font-properties crashes shortly after showing its toplevel window (but before drawing any widgets). Steps to reproduce the problem: 1. run gnome-font properties Actual Results: font properties box crashes Expected Results: font properties box opens How often does this happen? all the time Additional Information: using garnome 0.12.0 Debugging Information: Backtrace was generated from '/opt/gnome2/bin/gnome-font-properties' [New Thread 1024 (LWP 17181)] 0x409194b9 in wait4 () from /lib/libc.so.6
+ Trace 24355
Thread 1 (Thread 1024 (LWP 17181))
------- Bug moved to this database by unknown@bugzilla.gnome.org 2002-06-27 00:59 ------- The original reporter (bjt23@cornell.edu) of this bug does not have an account here. Reassigning to the exporter, unknown@bugzilla.gnome.org. Reassigning to the default owner of the component, control-center-maint@bugzilla.gnome.org.
ok, strace notes that it is trying to open font-properties.png, without a pathname attached to it. if i go into the directory where that file is, and run gnome-font-properties, it opens properly. also it tries to open /opt/gnome2/lib/charset.alias, which doesn't exist. this doesn't appear to be a problem tho (at least not when font-properties.png is found).
Thanks for the details, Brian.
Blah this was the same damn bug as the other one. cut-n-pasted into here, and screwed up further. Fixed in CVS.
*** Bug 86676 has been marked as a duplicate of this bug. ***
*** Bug 86675 has been marked as a duplicate of this bug. ***
*** Bug 86773 has been marked as a duplicate of this bug. ***
*** Bug 86806 has been marked as a duplicate of this bug. ***
*** Bug 87042 has been marked as a duplicate of this bug. ***
*** Bug 86672 has been marked as a duplicate of this bug. ***
*** Bug 87310 has been marked as a duplicate of this bug. ***
*** Bug 86759 has been marked as a duplicate of this bug. ***
*** Bug 88023 has been marked as a duplicate of this bug. ***