fix and move the code into capplet_set_icon.

2002-06-27  Jody Goldberg <jody@gnome.org>

	* gnome-keybinding-properties.c (setup_dialog) : fix and move the code
	  into capplet_set_icon.

2002-06-27  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=86593
	* main.c (setup_dialog) : watch for missing icons

2002-06-27  Jody Goldberg <jody@gnome.org>

	* capplet-util.c (capplet_set_icon) : new util.